--- a/css/responsive/responsive.scss
+++ b/css/responsive/responsive.scss
@@ -3,6 +3,7 @@
         max-width: 1500px;
     }
 
+    article,
     section,
     footer,
     header {
@@ -83,7 +84,9 @@
 
 @media (max-width: 1000px) {
 
+    article,
     header,
+    article,
     section {
         padding: 0 50px;
     }
@@ -189,6 +192,7 @@
 
 @media(max-width:900px) {
 
+    article,
     header,
     section,
     footer {
@@ -630,6 +634,7 @@
 
 @media(max-width:500px) {
 
+    article,
     header,
     section,
     footer,
