--- a/css/style.scss
+++ b/css/style.scss
@@ -182,8 +182,8 @@ header {
                         font-weight: 500;
                         color: rgb(218, 218, 218);
 
-                        
-                        &:hover,    
+
+                        &:hover,
                         &.active {
                             color: var(--putih);
                         }
@@ -1558,3 +1558,114 @@ footer {
 }
 
 // Page Artikel End
+
+
+
+
+
+
+
+/* Halaman Per Artikel start */
+.contentArtikel {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .container {
+        width: 80%;
+
+        .titleArtikel {
+            font-size: 2rem;
+            font-weight: 700;
+            line-height: 40px;
+        }
+
+
+        .writer {
+            font-size: 1rem;
+            margin: 20px 0;
+        }
+
+        .thumbnail {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            background-color: var(--putih-900);
+        }
+
+        .mainArtikel {
+
+            h3 {
+                font-size: 1.5rem;
+            }
+
+            p {
+                font-size: 1rem;
+                margin: 10px 0;
+                line-height: 30px;
+            }
+
+            ul {
+                margin: 20px 0;
+
+                li {
+                    padding: 7px;
+                    margin-left: 20px;
+                    list-style: disc;
+                    font-weight: 500;
+                }
+            }
+
+            a {
+                color: var(--biru-cerah);
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+
+        }
+    }
+}
+
+
+
+.komentar {
+    width: 100%;
+    height: 100%;
+
+    .perKomentar {
+        display: flex;
+        flex-direction: column;
+        margin: 40px 0;
+
+        .profil {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+
+            img {
+                width: 45px;
+                height: 45px;
+                object-fit: cover;
+                border-radius: 50%;
+                background-color: var(--putih-900);
+            }
+
+            .nama {
+                margin-left: 15px;
+
+                h3 {
+                    font-size: 1.3rem;
+                }
+
+                p {
+                    font-size: .9rem;
+                }
+            }
+        }
+    }
+}
