--- a/css/event/event.scss
+++ b/css/event/event.scss
@@ -40,7 +40,7 @@ img {
                 background-color: var(--putih);
                 border: 1px solid #e4e4e7;
                 border-radius: 7px;
-                color: #3f3f3f;
+                color: var(--hitam-santai);
                 padding: 1rem;
                 margin-bottom: 30px;
                 position: relative;
@@ -126,7 +126,7 @@ img {
 
                         &:last-child {
                             background-color: var(--putih);
-                            color: #3f3f3f;
+                            color: var(--hitam-santai);
                             border: var(--border);
                         }
                     }
@@ -293,7 +293,7 @@ img {
                             }
 
                             span {
-                                color: #3f3f3f;
+                                color: var(--hitam-santai);
                                 font-weight: 600;
                             }
 
