Membuat Modal untuk Filter Event dan update warna supaya diterima wcag

--- a/css/responsive/responsive.css
+++ b/css/responsive/responsive.css
@@ -351,6 +351,9 @@
     display: -ms-flexbox;
     display: flex;
   }
+  .modalContainer .modal {
+    width: 100%;
+  }
   .galeri .perGaleri {
     height: 150px;
   }
