--- a/css/responsive/responsive.scss
+++ b/css/responsive/responsive.scss
@@ -491,6 +491,14 @@
     }
 
 
+    .modalContainer {
+
+        .modal {
+            width: 100%;
+        }
+    }
+
+
     .galeri {
 
         .perGaleri {
