--- a/css/event/event.css
+++ b/css/event/event.css
@@ -267,7 +267,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 99999999;
+  z-index: 999;
   position: static;
 }
 
