--- a/css/riset/riset.scss
+++ b/css/riset/riset.scss
@@ -42,6 +42,7 @@
 
     --outline-input: #0176f4bd;
     --outline-button: #63aeffbd;
+    --outline-primary: #0e31ce;
     --outline-warning: #ffe601f1;
     --outline-success: #1fdd8ee3;
     --outline-white: rgb(207, 207, 207);
@@ -275,6 +276,10 @@ section {
 
 .btn-primary:hover {
     background-color: var(--primary-hover);
+}
+
+.btn-primary:focus {
+    outline: 2px solid var(--outline-primary);
 }
 
 .btn-warning {
